--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "enzyme": "^3.3.0",
     "jest": "^22.4.2",
     "superagent": "^3.8.2",
-    "underscore": "^1.8.3",
     "supertest": "^3.0.0",
-    "eslint": "^4.18.1"
+    "underscore": "^1.8.3"
   }
 }
