--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "jest",
     "start": "node server/server.js",
-    "dev-react": "webpack",
-    "build-data": "node generatorFunctions/seed.js"
+    "dev-react": "webpack -d --watch",
+    "build-data": "time node generatorFunctions/jsonScript.js",
+    "seedDB": "mongoimport --db localhost --collection information --file seedData.js"
+
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "babel-core": "^6.17.0",
     "babel-jest": "^22.4.1",
     "babel-loader": "^6.2.5",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "bootstrap": "^4.0.0",
@@ -24,6 +27,7 @@
     "dotenv": "^5.0.1",
     "eslint-plugin-jest": "^21.12.2",
     "express": "^4.14.0",
+    "faker": "^4.1.0",
     "file-loader": "^1.1.10",
     "geocoder": "^0.2.3",
     "google-geolocation": "^1.0.2",
@@ -38,7 +42,6 @@
     "reactstrap": "^5.0.0-beta.2",
     "request": "^2.75.0",
     "style-loader": "^0.20.2",
-    "babel-preset-env": "^1.6.1",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
