--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "mongoose": "^4.6.4",
+    "newrelic": "^3.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-icons": "^2.2.7",
     "react-moment": "^0.7.0",
     "react-popper": "^0.8.2",
     "reactstrap": "^5.0.0-beta.2",
+    "redis": "^2.8.0",
     "request": "^2.75.0",
     "style-loader": "^0.20.2",
     "webpack": "^1.13.2"
